contrast prob fixed

--- a/home_page.css
+++ b/home_page.css
@@ -44,4 +44,5 @@ li a {
 }
 .introofmetal {
     background-color: black;
+    width:auto;
 }
